Rework normalization in LayoutSVGInlineText

When performing (whitespace) normalization in an OriginalText override,
we miss normalization when the layout object has its text content
updated.
Perform the normalization in the SetTextInternal override instead to
cover the text-content-update case as well.

Bug: 645597
Change-Id: Id65cbbe75dbcc636f4cde38b8bb8887d05caf1d7
Reviewed-on: https://chromium-review.googlesource.com/664812
Reviewed-by: Stephen Chenney <schenney@chromium.org>
Commit-Queue: Fredrik Söderquist <fs@opera.com>
Cr-Commit-Position: refs/heads/master@{#501678}
Former-commit-id: 23eb4aecb98591f5ab0da65f14a7a970374b1f58